[project]
name = "world-wild-listening"
version = "1.0.0"
description = "AI-powered global survey system with multi-LLM support via LangChain"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    # UI Framework
    "gradio>=4.0.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Visualization
    "plotly>=5.17.0",
    
    # LangChain Core
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    
    # Additional utilities
    "python-dateutil>=2.8.0",
]

# Optional dependencies (extras)
[project.optional-dependencies]
# OpenAI provider
openai = [
    "langchain-openai>=0.0.5",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

# Anthropic provider
anthropic = [
    "langchain-anthropic>=0.0.1",
    "anthropic>=0.8.0",
]

# Google provider
google = [
    "langchain-google-genai>=0.0.1",
    "google-generativeai>=0.3.0",
]

# Local models (Ollama)
local = [
    "langchain-community>=0.0.1",
]

# All providers
all = [
    "langchain-openai>=0.0.5",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "langchain-anthropic>=0.0.1",
    "anthropic>=0.8.0",
    "langchain-google-genai>=0.0.1",
    "google-generativeai>=0.3.0",
    "langchain-community>=0.0.1",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Advanced features
advanced = [
    "langchain-experimental>=0.0.1",
    "langsmith>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# UV-specific configuration
[tool.uv]
# Default Python version
python = "3.11"

# Package index configuration
index-url = "https://pypi.org/simple"

# Development mode settings
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]